# dsam

./: .gitignore  .project
Apps/: ClickGainFreqFuncs.c  ClickGainFreqFuncs.h  ClickPhaseFreqFuncs.c  ClickPhaseFreqFuncs.h  DistProds.c  DistProds.h  FEvalSetup.hin  FilterShape.c  FilterShape.h  INSTALL  ImpulseResp.c  ImpulseResp.h  Makefile.am  Makefile.in  MultiIOFuncs.c  MultiIOFuncs.h  PhaseFreqFuncs.c  PhaseFreqFuncs.h  PhaseIntFuncs.c  PhaseIntFuncs.h  README  README.in  README.txt  RelClickPhaseFreqFuncs.c  RelClickPhaseFreqFuncs.h  RelPhaseFreqFuncs.c  RelPhaseFreqFuncs.h  TuningCurve.c  TuningCurve.h  TwoTSRatio.c  TwoTSRatio.h  TwoTSResp.c  TwoTSResp.h  Utils.c  Utils.h  aclocal.m4  autogen.sh  configure.ac  feval.cpp  feval.h  (+2 more)
Apps/AMS/: .cdtbuild  .cdtproject  .cproject  .project  AMS.ise  AMS64.ise  AMSSetup.hin  AUTHORS  COPYING  INSTALL  INSTALL.in  LICENSE  Makefile  Makefile.am  Makefile.in  README.in  README.rtf  README.txt  README.xml  a.out  aclocal.m4  ams.cpp  ams.h  ams.par  ams.rc  ams.spec.in  ams.xpm  ams_beta.ise  ams_inst.iwz  autogen.sh  config.h.in  config.status  configure  configure.ac  mkunxinst.env
Apps/CfgTools/: Makefile.am  Makefile.in  dos-dist
Apps/GammaC/: Click1.par  Display1.par  FIRMG2v02ms.par  FindBin1.par  GammaC800Hz.par  GammaC800Hz.sim  GammaC800Hz.spf  Intensty1.par  Makefile.am  Makefile.in  PTone1.par  Ramp1.par  feval.par
Apps/HelpFiles/: Makefile.am  Makefile.in  feval.hhp
Apps/Matlab/: ARODRNLCH35.m  AROGammaC800.m  DispCGFFuncs.m  DispCPFFuncs.m  DispDProds.m  DispFShape.m  DispIOFuncs.m  DispImpResp.m  DispPFFuncs.m  DispPIFuncs.m  DispRCPFFuncs.m  DispRPFFuncs.m  DispTCurve.m  DispTTSRatio.m  DispTTSResp.m  DoPhase.m  FiltDisp1.m  FiltDispCH35.m  FiltDispCarney800.m  FiltDispGP2381.m  FiltDispGammaC.m  FiltDispGammaC2k.m  FiltDispGammaC800.m  FiltDispHu2k.m  LogLogMultiLine.m  Makefile.am  Makefile.in  PlotMultiGraph.m  PlotMultiLine.m  PrintFigure.m  ReadTitledData.m  SemiLogXMultiLine.m  SemiLogYMultiLine.m  SetPrintOutput.m  split.m
Apps/Octave/: AROCH35.m  AROCarney800.m  DispCGFFuncs.m  DispCPFFuncs.m  DispDProds.m  DispFShape.m  DispIOFuncs.m  DispImpResp.m  DispPFFuncs.m  DispPIFuncs.m  DispRCPFFuncs.m  DispRPFFuncs.m  DispTCurve.m  DispTTSRatio.m  DispTTSResp.m  FiltDispCH16.m  FiltDispFIR1.m  FiltDispGP2381.m  FiltDispGammaC.m  FiltDispGammaC1k.m  FiltDispGammaC800.m  FiltDispL113.m  LogLogMultiLine.m  Makefile.am  Makefile.in  PlotMultiGraph.m  PlotMultiLine.m  ReadData.m  SemiLogXMultiLine.m  SemiLogYMultiLine.m  SetPrintOutput.m
Apps/RunDSAMSim/: .autotools  .cdtbuild  .cdtproject  .cproject  .project  AUTHORS  COPYING  CompileRunDSAMSim.m  DSAMMatrix.c  DSAMMatrix.h  INSTALL.in  Makefile  Makefile.am  Makefile.in  Makefile.old  MatInSignal.cpp  MatMainApp.cpp  MatMainApp.h  README.in  RunDSAMSim.cpp  RunDSAMSim.def  RunDSAMSim.ise  RunDSAMSim.m  RunDSAMSim.nsi  RunDSAMSim.rc  RunDSAMSim.spec  RunDSAMSim.spec.in  RunDSAMSimMat.c  RunDSAMSimOct.cpp  RunDSAMSimSetup.h  RunDSAMSimSetup.hin  aclocal.m4  autogen.sh  config.status  configure  configure.ac  libtool  mkunxinst.env  stamp-h1
Apps/RunDSAMSimJ/: .project
Apps/SAMS/: .autotools  .cproject  .project  AUTHORS  Makefile  Makefile.am  Makefile.in  SAMS Logo.xcf  SAMS.nsi  SAMSSetup.h  SAMSSetup.hin  ams.h  ams.rc  autogen.sh  config.h.in  config.status  configure  configure.ac  manpage.xml  manpage.xml.in  sams.1  sams.cpp  sams.desktop  sams.desktop.in  sams.h  sams.par  sams.rc  sams.spec  sams.spec.in  sams.xbm  sams.xpm  stamp-h1
DSAMSrc/: .autotools  .cdtbuild  .cdtconfigure  .cdtconfigure.Build (GNU)  .cdtproject  .cproject  .project  ChangeLog  DSAMSetup.h  DSAMSetup.hin  DSAM_SDK.nsi  INSTALL.in  LICENSE  Makefile  Makefile.am  Makefile.in  README.in  autogen.sh  config.status  configure  configure.ac  dsam-config  dsam-config.in  dsam.7  dsam.spec  dsam.spec.in  libtool  manpage.xml  stamp-h1
DSAMSrc/CfgTools/: Makefile  Makefile.am  Makefile.in  cvsconfigure  dos-dist
DSAMSrc/Examples/: AudPer86.c  AudPer86.par  AudPerGen.c  AudPerGen.par  AudPerSS.c  AudPerSS.par  GammaT1.par  GammaTLog.par  Makefile  Makefile.in  Meddis86.par  Meddis86.sim  PTone1.par  PreEmph1.par  Ramp1.par  Simple1.c
DSAMSrc/Include/: AnALSR.h  AnAutoCorr.h  AnAverages.h  AnConvolve.h  AnCrossCorr.h  AnExperiment.h  AnFindBin.h  AnFindNextIndex.h  AnFourierT.h  AnGeneral.h  AnHistogram.h  AnIntensity.h  AnInterSIH.h  AnSAC.h  AnSAImage.h  AnSpikeReg.h  AnSynchIndex.h  DSAM.h  DiSignalDisp.h  ExtCommon.h  ExtIPCClient.h  ExtIPCServer.h  ExtIPCUtils.h  ExtMainApp.h  ExtProcChainThread.h  ExtProcThread.h  ExtRunThreadedProc.h  ExtSimThread.h  ExtSingleProcThread.h  ExtSocket.h  ExtSocketServer.h  ExtXMLDocument.h  ExtXMLNode.h  FiAIFF.h  FiASCII.h  FiDataFile.h  FiMSWave.h  FiParFile.h  FiRaw.h  FiSndFile.h  (+157 more)
DSAMSrc/MSVC/: DSAMSrc.sln  DSAMvc.dsw  DSAMvc.sln  Makefile  Makefile.am  Makefile.in
DSAMSrc/ModuleSpecs/: AnALSR.mod  AnAutoCorr.mod  AnAverages.mod  AnCrossCorr.mod  AnFindBin.mod  AnFindNextIndex.mod  AnFourierT.mod  AnHistogram.mod  AnIntensity.mod  AnInterSIH.mod  AnSAC.mod  AnSAImage.mod  AnSpikeReg.mod  FiDataFile.mod  FlBandPass.mod  FlDistLowPass.mod  FlFIR.mod  FlLowPass.mod  FlMultiBPass.mod  FlZBMiddleEar.mod  GrSignalDisp.mod  IOAudioIn.mod  Makefile  Makefile.am  Makefile.in  MoANSGBinom.mod  MoANSGCarney.mod  MoANSGMeddis02.mod  MoANSGSimple.mod  MoBM0DRNL.mod  MoBMCarney.mod  MoBMCooke.mod  MoBMDRNL.mod  MoBMGammaC.mod  MoBMGammaT.mod  MoBMZhang.mod  MoBMZilanyBruce.mod  MoHCRPCarney.mod  MoHCRPLopezPoveda.mod  MoHCRPMeddis.mod  (+52 more)
DSAMSrc/NSIS/: DSAMAppUtils.nsh  DSAMGenUtils.nsh  Makefile  Makefile.in  WriteEnvStr.nsh
DSAMSrc/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
DSAMSrc/debian/: Makefile  Makefile.in  changelog  control  rules  shlibs.local.ex
DSAMSrc/src/: Makefile  Makefile.am  Makefile.in  makeb32.env  makefile.b32  makeunix.env
SupportLibs/ogl/: .autotools  .cproject  .project  Makefile.am  Makefile.in  OGLSetup.hin  configure  configure.ac  ogl.spec.in
Utils/ModGen/: .cdtbuild  (+32 more)
(+1358 files in other folders)
